# CodeWhale

./: .cnb.yml  Cargo.toml  README.md  config.example.toml
.github/workflows/: ci.yml  sync-cnb.yml
crates/agent/: Cargo.toml
crates/app-server/: Cargo.toml
crates/cli/: Cargo.toml
crates/config/: Cargo.toml
crates/core/: Cargo.toml
crates/execpolicy/: Cargo.toml
crates/hooks/: Cargo.toml
crates/tools/: Cargo.toml
crates/tui/: CHANGELOG.md  Cargo.toml
crates/tui/src/: client.rs  config.rs  main.rs  project_context.rs  prompts.rs  runtime_api.rs  runtime_threads.rs  settings.rs  working_set.rs
crates/tui/src/commands/: goal.rs  mod.rs  user_commands.rs
crates/tui/src/core/: engine.rs  ops.rs
crates/tui/src/core/engine/: approval.rs  context.rs  tests.rs  tool_setup.rs  turn_loop.rs
crates/tui/src/prompts/: continuation.md
crates/tui/src/tools/: goal.rs  mod.rs  registry.rs
crates/tui/src/tui/: app.rs  file_mention.rs  footer_ui.rs  history.rs  model_picker.rs  ui.rs  whale_routes.rs
crates/tui/src/tui/ui/: tests.rs
crates/tui/src/tui/widgets/: mod.rs  tool_card.rs
docs/: CNB_MIRROR.md  CONFIGURATION.md  INSTALL.md  RELEASE_CHECKLIST.md  RELEASE_RUNBOOK.md
npm/codewhale/: package.json
npm/deepseek-tui/: package.json
scripts/release/: publish-crates.sh
