[package]
name = "codewhale-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Codex-style CLI facade for DeepSeek workspace architecture"

[[bin]]
name = "codewhale"
path = "src/main.rs"

# Legacy alias — forwards to `codewhale` and prints a deprecation notice.
# Will be removed in v0.9.0.
[[bin]]
name = "deepseek"
path = "src/bin/deepseek_legacy_shim.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
codewhale-agent = { path = "../agent", version = "0.8.41" }
codewhale-app-server = { path = "../app-server", version = "0.8.41" }
codewhale-config = { path = "../config", version = "0.8.41" }
codewhale-execpolicy = { path = "../execpolicy", version = "0.8.41" }
codewhale-mcp = { path = "../mcp", version = "0.8.41" }
codewhale-secrets = { path = "../secrets", version = "0.8.41" }
codewhale-state = { path = "../state", version = "0.8.41" }
chrono.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
tokio.workspace = true
sha2.workspace = true
tempfile = "3.16"
tracing.workspace = true

[dev-dependencies]
