[package]
name = "codewhale-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core runtime boundaries for DeepSeek workspace architecture"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
codewhale-agent = { path = "../agent", version = "0.8.41" }
codewhale-config = { path = "../config", version = "0.8.41" }
codewhale-execpolicy = { path = "../execpolicy", version = "0.8.41" }
codewhale-hooks = { path = "../hooks", version = "0.8.41" }
codewhale-mcp = { path = "../mcp", version = "0.8.41" }
codewhale-protocol = { path = "../protocol", version = "0.8.41" }
codewhale-state = { path = "../state", version = "0.8.41" }
codewhale-tools = { path = "../tools", version = "0.8.41" }
serde_json.workspace = true
uuid.workspace = true
